# parallel-bellman-ford

./: .gitignore  README.md  benchmark.sh  compile.sh  consegna_workflow.sh  cuda_bellmanford.cu  omp_bellmanford.c  project.sbatch
cuda/: cuda_bellmanford.cu  cuda_bellmanford_old.cu
graphs/: graph_0.txt  graph_1.txt  graph_2.txt  graph_3.txt  graph_4.txt  graph_5.txt  graph_6.txt
old/: graph_6.txt  graph_neg.txt  omp_bellmanford_old.c
openmp/: CMakeLists.txt  omp_bellmanford.c
openmp/include/: bellmanford.h  graph.h
openmp/src/: bellmanford.c  graph.c  main.c  test.c
tools/: bf_tester.py  graph.txt  graph_1.txt  graph_maker.py
tools/plotting/: plotter.py
tools/res/: res_graph_1.txt  res_graph_2.txt  res_graph_3.txt
